# ops-study-maintainer-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  learning-lab-request.md
.github/workflows/: ci.yml
docs/: project-plan.md
docs/ko/: quickstart.md
docs/share/: github-profile-readme.md  intro-ko.md  short-share-posts-ko.md
examples/: aws-s3-evidence-example.md  generated-evidence-pack-example.md  linux-grep-find-lab.md  networking-ping-vs-curl-lab.md
src/ops_study_kit/: cli.py
templates/: aws-s3-beginner-lab.md  study-report-ja.md  study-report-ko.md
tests/: test_cli.py
