[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-study-maintainer-kit"
version = "0.3.0"
description = "Beginner-friendly DevOps/SRE study lab and report generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "william21c1210"}]
keywords = ["devops", "sre", "linux", "networking", "open-source", "education"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
ops-study-kit = "ops_study_kit.cli:main"
